--- a/css/main.css
+++ b/css/main.css
@@ -1178,6 +1178,7 @@ select {
 }
 
 .main-news {
+    position: relative;
     height: 34em;
     margin-bottom: 30px;
     border-radius: 4px;
@@ -1265,10 +1266,11 @@ select {
 }
 
 .main-news-description {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
-    top: -34em;
-    height: 100%;
+    width: 100%;
     background-color: #141e28;
     opacity: 0.8;
     text-align: center;
@@ -1324,6 +1326,7 @@ select {
 .main-news-title {
     font-size: 4rem;
     line-height: 1em;
+    padding: 0 10px;
     margin-top: 0;
     margin-bottom: 5px;
 }
@@ -2061,9 +2064,6 @@ span.chi_nounderline, .chi_nounderline {
     .main-news, .main-image {
         height: 28em;
     }
-    .main-news-description {
-        top: -28em;
-    }
     .share-container p {
         font-size: 0.9rem;
     }
@@ -2157,9 +2157,6 @@ span.chi_nounderline, .chi_nounderline {
     }
     .main-news, .main-image {
         height: 24em;
-    }
-    .main-news-description {
-        top: -24em;
     }
     .top-news {
         grid-auto-rows: 250px;
@@ -2573,9 +2570,6 @@ span.chi_nounderline, .chi_nounderline {
     }
     .main-news, .main-image {
         height: 30em;
-    }
-    .main-news-description {
-        top: -30em;
     }
     .main-news-title {
         font-size: 4.5rem;
@@ -3083,9 +3077,6 @@ span.chi_nounderline, .chi_nounderline {
     .main-news, .main-image {
         height: 23em;
     }
-    .main-news-description {
-        top: -23em;
-    }
     .top-news {
         grid-auto-rows: 220px;
         grid-gap: 25px;
@@ -3212,9 +3203,6 @@ span.chi_nounderline, .chi_nounderline {
     }
     .main-news, .main-image {
         height: 22em;
-    }
-    .main-news-description {
-        top: -22em;
     }
     .top-news {
         grid-auto-rows: 220px;
@@ -3825,9 +3813,6 @@ span.chi_nounderline, .chi_nounderline {
 /* ----------- iPhone 7 Landscape ----------- */
 
 @media screen and ( max-width: 635px) and (max-height: 430px) {
-    .main-news-description {
-        top: -300px;
-    }
     .main-news {
         height: 300px;
     }
@@ -3980,12 +3965,6 @@ window.outerHeight include toolbar and address bar----------- */
     }
     .main-news, .main-image {
         height: 28em;
-    }
-    .main-news-description {
-        top: -28em;
-    }
-    .main-news-title {
-        padding: 0;
     }
     .news-pgraph3 {
         font-size: 2rem;
@@ -4258,9 +4237,6 @@ window.outerHeight include toolbar and address bar----------- */
     .main-news, .main-image {
         height: 26em;
     }
-    .main-news-description {
-        top: -26em;
-    }
     .top-news-title {
         font-size: 2rem;
     }
@@ -4346,9 +4322,6 @@ window.outerHeight include toolbar and address bar----------- */
     }
     .main-news {
         height: 260px;
-    }
-    .main-news-description {
-        top: -260px;
     }
     .main-news a .news-image {
         width: 100%;
@@ -4768,9 +4741,6 @@ window.outerHeight include toolbar and address bar----------- */
     .main-news, .main-image {
         height: 20em;
     }
-    .main-news-description {
-        top: -20em;
-    }
     .main-news-title {
         font-size: 3rem;
     }
@@ -5066,9 +5036,6 @@ window.outerHeight include toolbar and address bar----------- */
     }
     .main-news, .main-image {
         height: 16em;
-    }
-    .main-news-description {
-        top: -16em;
     }
     .top-news {
         grid-auto-rows: 110px;
